link order, pysolfc improvements, comment on the tagsonomy

--- a/projects.yaml
+++ b/projects.yaml
@@ -1,4 +1,74 @@
 ---
+
+# Format of this file:
+#
+# - First we have the "tagsonomy", a tree of tags used to categorize the projects.
+# - After that is "projects", a list of awesome Python applications.
+#
+# Each section has its own notes on its format. Make sure to read them
+# before editing that section.
+
+tagsonomy:
+  # NOTE: order here controls order of the rendered text
+  architecture: # (?)
+      - desktop:
+          - gtk
+          - qt
+          - wx
+          - pygame
+          - other
+      - network:
+          - flask
+          - django
+          - twisted
+          - gevent
+          - other
+      - mobile:
+          - beeware   # not actually used atm
+          - kivy
+  platform:
+      - desktop:
+        - windows
+        - mac
+        - linux
+      - console
+      - mobile
+      - browser
+      - server (separate docker?)
+  topic:
+      - internet
+      - audio
+      - video
+      - graphics
+      - games
+      - productivity
+      - organization
+      - communication  # messaging & collab
+      - education
+      - science
+      - cms:
+          title: CMS
+      - erp:
+          title: ERP
+      - static_site
+      - dev:
+          desc: Projects related to software development and adjacent technical areas.
+          subtags:
+            - scm:
+                title: SCM
+            - code_review
+            - ops
+            - security
+            - docs
+            - editor
+            - pkg_mgr:
+                title: Package Managers
+            - pkg_repo:
+                title: Package Repositories
+            - build
+            - shell
+      - misc
+
 projects:
 ## COMPLETE FORMAT:
   # - name: Project Name
@@ -7,7 +77,7 @@ projects:
   # - docs_url: URL to docs
   # - home_url: Home page if not one of the above
   # - tags: ["", ""]  # see full taxonomy elsewhere in this file
-  # - desc: A handy app for stuff
+  # - desc: A handy app for stuff  # (avoid references to Python, free/open-source, and the app name, since those are implied.
 
 
 ## Audio
@@ -114,7 +184,9 @@ projects:
     tags: ["games"]
   - name: PySolFC  # solitaire games
     repo_url: https://github.com/shlomif/PySolFC
-    tags: ["games"]
+    home_url: https://pysolfc.sourceforge.io/
+    android_url: https://f-droid.org/en/packages/org.lufebe16.pysolfc/
+    tags: ["games", "kivy"]
 
 ## Productivity
   - name: Autokey
@@ -670,63 +742,4 @@ projects:
   # - name: getmail  # tarballs only, no repo?
   #   home_url: http://pyropus.ca/software/getmail/
 
-tagsonomy:
-  # NOTE: order here controls order of the rendered text
-  architecture: # (?)
-      - desktop:
-          - gtk
-          - qt
-          - wx
-          - pygame
-          - other
-      - network:
-          - flask
-          - django
-          - twisted
-          - gevent
-          - other
-      # - mobile:  # not actually used atm
-      #    - beeware
-      #    - kivy
-  platform:
-      - desktop:
-        - windows
-        - mac
-        - linux
-      - console
-      - mobile
-      - browser
-      - server (separate docker?)
-  topic:
-      - internet
-      - audio
-      - video
-      - graphics
-      - games
-      - productivity
-      - organization
-      - communication  # messaging & collab
-      - education
-      - science
-      - cms:
-          title: CMS
-      - erp:
-          title: ERP
-      - static_site
-      - dev:
-          desc: Projects related to software development and adjacent technical areas.
-          subtags:
-            - scm:
-                title: SCM
-            - code_review
-            - ops
-            - security
-            - docs
-            - editor
-            - pkg_mgr:
-                title: Package Managers
-            - pkg_repo:
-                title: Package Repositories
-            - build
-            - shell
-      - misc
+...
